tests/a/tests/integrity/fail/match/match.0.stderr
error: expected {b}{b,c}, found {bin}{*}
  --> tests/integrity/fail/match/match.0.rs:18:22
   |
18 |             let x_ = x;
   |                      ^
